@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 1997-2000 Matt Newman <matt@novadigm.com>
  *
- * $Header: /home/cvs/external/tls/tlsIO.c,v 1.5 2000/06/01 22:34:01 stanton Exp $
+ * $Header: /home/cvs/external/tls/tlsIO.c,v 1.6 2000/06/02 05:14:46 welch Exp $
  *
  * TLS (aka SSL) Channel - can be layered on any bi-directional
  * Tcl_Channel (Note: Requires Trf Core Patch)
@@ -142,6 +142,7 @@ CloseProc(ClientData instanceData,	/* The socket to close. */
 	statePtr->timer = (Tcl_TimerToken)NULL;
     }
 
+    Tls_Clean(statePtr);
     Tcl_EventuallyFree( (ClientData)statePtr, Tls_Free);
     return TCL_OK;
 }
